<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/watched_fragment_nav"
        android:icon="@drawable/ic_watched_24"
        android:orderInCategory="1"
        android:title="@string/watched"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/wanted_fragment_nav"
        android:icon="@drawable/ic_wanted_24"
        android:orderInCategory="2"
        android:title="@string/wanted"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/main_fragment_nav"
        android:icon="@drawable/ic_home_24"
        android:orderInCategory="3"
        android:title="@string/main"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/not_watched_fragment_nav"
        android:icon="@drawable/ic_not_watched_24"
        android:orderInCategory="4"
        android:title="@string/not_watched"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/unwanted_fragment_nav"
        android:icon="@drawable/ic_unwanted_24"
        android:orderInCategory="5"
        android:title="@string/unwanted"
        app:showAsAction="ifRoom" />
</menu>