<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AniList</string>
    <string name="todo">todo</string>
    <string name="anime">Anime</string>
    <string name="not_watched">Not watched</string>
    <string name="watched">Watched</string>
    <string name="wanted">Wanted</string>
    <string name="main">Main</string>
    <string name="unwanted">Unwanted</string>
    <string name="default_description">Default description</string>
    <string name="description">description</string>
    <string name="rating">Rating</string>
    <string name="my_rate">My rate</string>
    <string name="seriesQuantity">Episodes</string>
    <string name="author">Author</string>
    <string name="genre">Genre</string>
    <string name="data">Date</string>
    <string name="age_rating">Age rating</string>
    <string name="move_to">Move to</string>
    <string name="search">Search</string>
    <string name="sort">Sort by</string>
    <string name="me">Me</string>
    <string name="filters">Filters</string>
    <string name="new_anime_uploaded">new anime uploaded</string>
    <string name="actual_data">You have actual data</string>
    <string name="no_connection">No connection</string>
    <string name="synchronization">Synchronization</string>
    <string name="found_new_anime">New anime are found</string>
    <string name="server_error">Server error</string>
    <string name="rated">Rated</string>
    <string name="updated">Updated</string>
    <string name="skip">SKIP</string>
    <dimen name="recycler_item_text_size">25sp</dimen>
    <dimen name="recycler_item_line_height">1dp</dimen>

    <!--  Dialog  -->
    <string name="newVersionAvailable">A newer version is available</string>
    <string name="wannaUpdate">Do you want to update the app?</string>
    <string name="yes">Yes</string>
    <string name="copied">Copied</string>

    <!--    Lists    -->
    <string name="in_queue_list">In-queue:</string>
    <string name="watched_list">Watched:</string>
    <string name="not_watched_list">Not-watched:</string>
    <string name="unwanted_list">Unwanted:</string>
    <string name="unsorted_list">Unsorted:</string>

    <!--    Filter    -->
    <string name="filter">Filter</string>
    <string name="genres">Genre: </string>
    <string name="years">Years: </string>
    <string name="sort_by">Sort by: </string>
    <string name="clear_filter">Clear filter</string>
    <string name="OK">OK</string>
    <string name="cancel">Cancel</string>
    <string name="night_mode">Night mode</string>
    <string name="rate_this_title">Rate</string>
    <string name="later">Later</string>
    <string name="zero">0</string>
    <string name="tryLater">Try later</string>
    <!--    Content description    -->
    <string name="animeCoverBehindContentDescription">Semi-visible anime cover behind the text</string>
    <string name="animeCoverContentDescription">Anime cover</string>
    <string name="oneStarContentDescription">One star</string>
    <string name="twoStarContentDescription">Two star</string>
    <string name="threeStarContentDescription">Three star</string>
    <string name="fourStarContentDescription">Four star</string>
    <string name="fiveStarContentDescription">Five star</string>
</resources>