...

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        style="@style/bottomAppBarBackStyle">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/nav_bar"
            style="@style/bottomNavBar" />
    </com.google.android.material.bottomappbar.BottomAppBar>

    <FrameLayout
        android:id="@+id/loadingLayout"
        style="@style/loadingLayoutStyle">
...
